[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "np_annoy"
version = "0.0.0"
description = "A native python (NP) implementation of the ANNOY algorithm."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
authors = [{name = "Ben Whitesell" }]


[project.optional-dependencies]
dev = ["pytest<8,>=7", "mypy<3,>=2"]


[tool.setuptools]
packages = ["np_annoy"]


[tool.setuptools.packages.find]
where = ["np_annoy"]
include = ["np_annoy"]
